feat: 完善v1.0优化需求文档及阶段开发计划
- 新增14天开发计划文档(Day01-Day14)
- 新增用户与成员姓名一致性设计
- 新增家谱树当前用户标识优化
- 更新README项目名为'传承谱'
- 更新.gitignore添加target/目录

--- a/参考文档/家谱项目v1.0_优化需求文档.md
+++ b/参考文档/家谱项目v1.0_优化需求文档.md
@@ -1,6 +1,6 @@
 # 家谱项目 v1.0 功能优化需求文档
 
-**文档版本**：v1.0.1
+**文档版本**：v1.0.2
 **创建日期**：2026-02-21
 **文档状态**：待评审
 **产品负责人**：待定
@@ -20,6 +20,13 @@
 8. [权限矩阵](#8-权限矩阵)
 9. [非功能性需求](#9-非功能性需求)
 10. [开放问题与风险](#10-开放问题与风险)
+11. [安全性优化](#11-安全性优化)
+12. [功能补充优化](#12-功能补充优化)
+13. [代码质量优化](#13-代码质量优化)
+14. [架构优化](#14-架构优化)
+15. [性能优化](#15-性能优化)
+16. [用户体验优化](#16-用户体验优化)
+17. [优化优先级排期](#17-优化优先级排期)
 
 ---
 
@@ -74,6 +81,7 @@
 
 - 超级管理员将某用户设置为普通用户时，该用户将失去**所有家谱**的管理权限
 - **保护机制**：若目标用户是某一家谱的**唯一管理员**，则禁止执行降级操作，系统需给出提示：
+  
   > "该用户是「{家谱名称}」的唯一管理员，请先为该家谱指定其他管理员后再操作。"
 - 若用户同时管理多个家谱，降级后所有家谱管理权一并撤销
 
@@ -280,40 +288,251 @@
 
 ---
 
-## 9. 非功能性需求
+## 11. 安全性优化
 
-### 9.1 数据一致性
+### 11.1 认证机制升级
 
-- 角色变更操作需在事务中执行，确保 UserGenealogy 表与 User 全局角色字段同步更新
-- 唯一管理员保护校验需在数据库层加锁，防止并发操作绕过校验
+| 优化项 | 当前状态 | 目标状态 | 优先级 |
+|--------|----------|----------|--------|
+| 认证方式 | X-User-Id Header | JWT Token 认证 | 高 |
+| 密码存储 | 明文存储 | BCrypt 加密 | 高 |
+| Token 管理 | 无 | 支持 Token 刷新、失效机制 | 高 |
+| 登录保护 | 无 | 登录失败次数限制、验证码 | 中 |
 
-### 9.2 操作日志
+### 11.2 权限控制增强
 
-- 所有角色变更、成员编辑、审批操作均需记录操作日志（操作人、操作时间、操作内容、变更前后值）
+- 实现基于角色的访问控制（RBAC）
+- 添加接口级权限注解 `@RequiresRole`
+- 完善数据权限：用户只能操作自己有权限的家谱数据
+- 添加操作日志审计
 
-### 9.3 性能要求
+### 11.3 接口安全
 
-- 后台列表分页查询响应时间 < 1s（数据量 10 万级）
-- 成员树状图加载时间 < 2s（单家谱成员数 < 1000 人）
-
----
-
-## 10. 开放问题与风险
-
-| # | 问题描述 | 优先级 | 负责人 | 状态 |
-|---|----------|--------|--------|------|
-| 1 | 小程序端普通用户新增成员是否需要审批，审批节点如何设计？ | 高 | 产品 | 待讨论 |
-| 2 | 家谱管理员被降级后，其历史审批记录如何展示？ | 中 | 产品/研发 | 待讨论 |
-| 3 | 成员跨家谱迁移时，原家谱中的成员关系数据是否保留？ | 高 | 研发 | 待讨论 |
-| 4 | 超级管理员账号是否支持多个？如何创建超级管理员？ | 高 | 产品 | 待讨论 |
-| 5 | 小程序新增上一代时，若成员已存在父辈，是否允许添加多个父辈节点（如养父母）？ | 中 | 产品 | 待讨论 |
+- 添加请求频率限制（Rate Limiting）
+- 敏感操作二次验证（如删除家谱）
+- XSS/CSRF 防护
 
 ---
 
-*文档结束*
+## 12. 功能补充优化
+
+### 12.1 关系类型完善
+
+当前关系类型不完整，需补充：
+
+| 现有类型 | 缺失类型 |
+|----------|----------|
+| father_son | father_daughter |
+| mother_son | mother_daughter |
+
+新增关系类型：
+
+| 关系类型 | 说明 |
+|----------|------|
+| spouse | 配偶 |
+| sibling | 兄弟姐妹 |
+
+### 12.2 成员信息修改
+
+`EditRequest` 处理中缺少 `birthDate` 字段的处理逻辑，需补充。
+
+### 12.3 文件上传功能
+
+- 实现头像上传功能
+- 支持本地存储或 OSS 云存储
+- 图片压缩和格式校验
+- 上传进度展示
+
+### 12.4 扫码加入家谱
+
+小程序端新增功能：
+
+- 生成家谱二维码
+- 扫描二维码加入家谱
+- 二维码有效期设置
+
+### 12.5 消息通知系统
+
+| 通知场景 | 通知方式 |
+|----------|----------|
+| 审批通过/拒绝 | 小程序消息 + 站内信 |
+| 新成员加入 | 站内信 |
+| 家谱邀请 | 小程序消息 |
+| 系统公告 | 站内信 |
+
+### 12.6 搜索功能
+
+- 家谱名称搜索
+- 成员姓名搜索
+- 组合条件搜索
+
+---
+
+## 13. 代码质量优化
+
+### 13.1 单元测试
+
+- Controller 层接口测试
+- Service 层业务逻辑测试
+- 测试覆盖率目标：60%+
+
+### 13.2 异常处理
+
+- 定义统一业务异常码
+- 完善异常信息国际化
+- 前端友好的错误提示
+
+### 13.3 日志系统
+
+| 日志类型 | 说明 |
+|----------|------|
+| 操作日志 | 记录关键业务操作 |
+| 错误日志 | 异常堆栈记录 |
+| 访问日志 | API 请求记录 |
+
+### 13.4 配置管理
+
+- 移除硬编码配置
+- 使用环境变量或配置中心
+- 区分开发/测试/生产环境配置
+
+---
+
+## 14. 架构优化
+
+### 14.1 缓存机制
+
+| 缓存场景 | 缓存策略 |
+|----------|----------|
+| 用户信息 | Redis，过期时间 30 分钟 |
+| 家谱树结构 | Redis，变更时清除 |
+| 系统配置 | Redis，长期缓存 |
+
+### 14.2 事务管理
+
+- 复杂业务操作添加 `@Transactional`
+- 明确事务边界
+- 处理分布式事务场景（如有）
+
+### 14.3 前端架构
+
+**管理后台优化：**
+
+- 引入 Pinia 状态管理
+- API 接口层统一封装
+- 组件库按需加载优化
+
+**小程序优化：**
+
+- 升级为 Vue 3 Composition API
+- TypeScript 支持
+- 组件化重构
+
+### 14.4 API 文档
+
+- 集成 Swagger/Knife4j
+- 自动生成 API 文档
+- 接口调试支持
+
+---
+
+## 15. 性能优化
+
+### 15.1 数据库优化
+
+- 添加必要索引（家谱码、用户ID、家谱ID）
+- 分页查询优化
+- 慢查询监控
+
+### 15.2 前端性能
+
+- 路由懒加载
+- 图片懒加载
+- 列表虚拟滚动（大数据量）
+- 打包体积优化
+
+### 15.3 接口性能
+
+- 接口响应时间监控
+- 批量接口合并
+- 数据传输压缩
+
+---
+
+## 16. 用户体验优化
+
+### 16.1 小程序体验
+
+| 优化项 | 说明 |
+|--------|------|
+| 加载状态 | 统一 loading 组件 |
+| 空状态 | 无数据时的友好提示 |
+| 错误提示 | 操作失败的明确反馈 |
+| 下拉刷新 | 列表页支持下拉刷新 |
+| 骨架屏 | 首屏加载骨架屏 |
+
+### 16.2 管理后台体验
+
+| 优化项 | 说明 |
+|--------|------|
+| 面包屑导航 | 页面层级展示 |
+| 操作确认 | 删除等危险操作二次确认 |
+| 批量操作 | 支持批量删除、批量审批 |
+| 数据导出 | 成员数据导出 Excel |
+
+### 16.3 交互细节
+
+- 家谱树节点拖拽排序
+- 成员详情卡片快速编辑
+- 操作历史记录查看
+- 数据变更对比展示
+
+---
+
+## 17. 优化优先级排期
+
+### 第一阶段（P0 - 安全加固）
+
+| 优化项 | 预计工时 |
+|--------|----------|
+| JWT 认证实现 | 2 天 |
+| 密码加密存储 | 0.5 天 |
+| 权限控制完善 | 2 天 |
+| 接口安全加固 | 1 天 |
+
+### 第二阶段（P1 - 功能完善）
+
+| 优化项 | 预计工时 |
+|--------|----------|
+| 关系类型补充 | 0.5 天 |
+| 成员信息修改完善 | 0.5 天 |
+| 文件上传功能 | 2 天 |
+| 扫码加入家谱 | 1 天 |
+| 搜索功能 | 1 天 |
+
+### 第三阶段（P2 - 质量提升）
+
+| 优化项 | 预计工时 |
+|--------|----------|
+| 单元测试编写 | 3 天 |
+| 异常处理完善 | 1 天 |
+| 日志系统搭建 | 1 天 |
+| API 文档集成 | 0.5 天 |
+
+### 第四阶段（P3 - 体验优化）
+
+| 优化项 | 预计工时 |
+|--------|----------|
+| 消息通知系统 | 2 天 |
+| 缓存机制 | 1 天 |
+| 前端性能优化 | 2 天 |
+| 用户体验细节 | 2 天 |
+
+---
 
 > **变更记录**
 >
 > | 版本 | 日期 | 修改内容 | 修改人 |
 > |------|------|----------|--------|
 > | v1.0.1 | 2026-02-21 | 初稿，整理 v1.0 优化需求 | PM |
+> | v1.0.2 | 2026-02-21 | 新增安全性、功能补充、代码质量、架构、性能、用户体验优化章节 | PM |
